istio-resource/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pingpong-a-virtualservice
  namespace: pingpong-a
spec:
  hosts:
    - "pingpong-a-esg-demo.site"
  gateways:
    - istio-system/pingpong-gateway
  http:
    - match:
        - uri:
            prefix: /ping
      route:
        - destination:
            host: pingponger-a.pingpong-a.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pingpong-b-virtualservice
  namespace: pingpong-b
spec:
  hosts:
    - "pingpong-a-esg-demo.site"
  gateways:
    - istio-system/pingpong-gateway
  http:
    - match:
        - uri:
            prefix: /ping
      route:
        - destination:
            host: pingponger-b.pingpong-b.svc.cluster.local
            port:
              number: 8080
